# Messami

./: CMakeLists.txt  Main.qml  chatclient.cpp  chatclient.h  chatsscreen.qml  databasemanager.cpp  databasemanager.h  framelesswindow.cpp  framelesswindow.h  geomanager.cpp  geomanager.h  loginscreen.qml  main.cpp  messagemodel.cpp  messagemodel.h  messengercore.cpp  messengercore.h  networkmanager.cpp  networkmanager.h
